# pntr

./: CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _clang-format
cmake/: Tools.cmake  pntrConfig.cmake.in
examples/: CMakeLists.txt  README.md  pntr-custom-memory-pool.cpp  pntr-memory-pool.cpp  pntr-object-pool.cpp
pntr/: AllocatorMalloc.hpp  AllocatorMemoryResource.hpp  CMakeLists.txt  ControlAlloc.hpp  ControlData.hpp  ControlNew.hpp  CounterThreadSafe.hpp  CounterThreadUnsafe.hpp  Deleter.hpp  Intruder.hpp  SharedPtr.hpp  WeakPtr.hpp  common.hpp  pntr.hpp
pntr/detail/: AllocAdaptBase.hpp  AllocAdaptPointer.hpp  AllocAdaptTypeInfo.hpp  AllocAdaptTyped.hpp  ControlDataAlign.hpp  ControlDataOffset.hpp  ControlDataSize.hpp  ControlDataStorage.hpp  ControlDataUsage.hpp  ControlDataUser.hpp  ControlDataWeak.hpp  ControlDeleter.hpp  PntrTypeTraits.hpp
single-header/: CMakeLists.txt  README.md  pntr-single-header-generator.cpp
single-header/pntr/: pntr.hpp
tests/: CMakeLists.txt  README.md  benchmark-Counter.cpp  tests-ControlAlloc.cpp  tests-ControlData.cpp  tests-ControlNew.cpp  tests-Counter.cpp  tests-SharedPtr.cpp  tests-WeakPtr.cpp  tests-common.hpp
tutorial/: CMakeLists.txt  README.md  pntr-tutorial.cpp
